--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,4 +2,12 @@
 
 export("%>%")
 export(biomart_df)
+export(check_coloc_data_format)
+export(convert_rs_to_loc)
+export(get_coloc_results)
+export(get_genes_within_1Mb_of_signif_SNPs)
+export(get_varbeta)
+export(make_results_dir)
+export(merge_coloc_summaries)
+export(save_coloc_results)
 importFrom(magrittr,"%>%")
