Add functions for tidying eQTLGen and psychencode eQTLs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,6 @@ export(get_varbeta)
 export(make_results_dir)
 export(merge_coloc_summaries)
 export(save_coloc_results)
+export(tidy_eQTL_eQTLGen)
+export(tidy_eQTL_psychencode)
 importFrom(magrittr,"%>%")
