Export join_coloc_datasets() to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(convert_rs_to_loc)
 export(get_coloc_results)
 export(get_genes_within_1Mb_of_signif_SNPs)
 export(get_varbeta)
+export(join_coloc_datasets)
 export(make_results_dir)
 export(merge_coloc_summaries)
 export(save_coloc_results)
