fix: warnings and notes from devtools::check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,4 +14,6 @@ export(merge_coloc_summaries)
 export(save_coloc_results)
 export(tidy_eQTL_eQTLGen)
 export(tidy_eQTL_psychencode)
+importFrom(S4Vectors,subjectHits)
 importFrom(magrittr,"%>%")
+importFrom(tidyselect,contains)
